--- a/0156-2023-10-10.md
+++ b/0156-2023-10-10.md
@@ -12,6 +12,8 @@
 *   Now up to full 128-bits (16 bytes) storage. Even try more and see if still fits in 1x1.
 *   Created initial dumb cocotb test in order to prove we can generate a VCD file. See: [Automated Tests](#automated-tests).
 *   Made [tests run in GitHub Action](#add-test-gha-to-replace-wokwi_test).
+*   Added spiflash to test, and it [runs as expected in GHA](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6475108704/job/17581446928). Some unexpected X signals but probably due to some regs not having reset (esp. `byte_alt`?)
+
 
 # Goals
 
@@ -20,6 +22,7 @@
 *   SMELL: RESET signal should drive SPI /CS high and keep it high until the next valid sequence starts.
 *   Test out extra RGB333 range. Show colour bars/palette in otherwise unused screen area?
 *   Ensure that RGB111, RGB222, RGB333 all give results that can be visually interpreted.
+
 
 # Stretch
 
@@ -240,6 +243,7 @@ View the VCD file it generated: `gtkwave tb.vcd tb.gtkw` -- NOTE: I already wrot
 
 GTKWave might appear blurry or oversized if High DPI is used in Windows. While GTKWave is running, right-click it in the taskbar, go to Properties => Compatibility => Settings => Change high DPI settings => then tick `Override high DPI scaling behavior` and set `Scaling performed by:` to `Application`. Launch it again, and it should look much clearer and at a normal size.
 
+
 # Adapting tests
 
 ## Notes
@@ -247,6 +251,7 @@ GTKWave might appear blurry or oversized if High DPI is used in Windows. While G
 *   I've moved the tests from `test/` to `src/`, so I'll clean a few things up.
 *   For TT doco on writing/running cocotb tests, see: https://tinytapeout.com/hdl/testing/, and [setting up a `test` GHA](https://tinytapeout.com/hdl/testing/#auto-running-tests-in-github-actions)
 *   Example TT cocotb tests from tt05-verilog-demo: https://github.com/TinyTapeout/tt05-verilog-demo/blob/main/src/tb.v
+
 
 ## Add `test` GHA to replace `wokwi_test`
 
@@ -258,11 +263,13 @@ This comes from [here](https://tinytapeout.com/hdl/testing/#auto-running-tests-i
 4.  Add it: `git add test.yaml`
 5.  Add this snippet to README, replacing the wokwi one: `![](../../workflows/test/badge.svg)`
 
+
 ## Run tests again from new home in `src/`
 
 1.  [Modified `Makefile`](https://github.com/algofoogle/tt05-vga-spi-rom/commit/f78739fa0fd83ec5449e0ed016771af5390f25dd#diff-3e2513390df543315686d7c85bd901ca9256268970032298815d2f893a9f0685)
 2.  `make -d` (note extra debug option -- oh wow it spits out a lot!)
 3.  It works. Time to check out that debug output and see what's wrong with Python.
+
 
 # Working out Python/cocotb/Makefile weirdness:
 
@@ -271,10 +278,12 @@ This comes from [here](https://tinytapeout.com/hdl/testing/#auto-running-tests-i
 *   Does this need a bug submission?
 *   For now I'm going to carry on without fixing this, since it seems I can still run tests anyway.
 
+
 # Gate-level tests
 
 *   I need to do more research on this. Check out [my tt03p5-solo-squash Makefile](https://github.com/algofoogle/tt03p5-solo-squash/blob/main/src/Makefile) which has all the extra args that might assist this, but also check latest TT05 stuff that Uri has been working on for GL-sim.
 *   Actually, maybe just start in [the official TT guide](https://tinytapeout.com/hdl/testing/#gate-level-testing)
+
 
 # Adding spiflash
 
@@ -293,6 +302,7 @@ This comes from [here](https://tinytapeout.com/hdl/testing/#auto-running-tests-i
 3.  Add reference to it and its original sources in the README.
 4.  Wire it up in `tb.v` and add it to `Makefile`.
 5.  CHECK: Make sure all design signals are connected, or at least accounted for: clk, rst_n, ena, ui_in, uo_out, uio_in, uio_out, uio_oe.
+
 
 # Notes
 
