--- a/0157-2023-10-11.md
+++ b/0157-2023-10-11.md
@@ -8,12 +8,51 @@
 
 # Goals
 
+*   Fix X signals in tt05-vga-spi-rom: Probably just need reset for all other regs?
 *   Review yesterday's ([0156](./0156-2023-10-10.md)).
-*   Convert VCD to image:
-    *   Via wavedrom?
-    *   Directly using some other tool?
-    *   Via GTKwave 'print' or screenshot?
-    *   Make it happen by default in `make`, with an ENV option to disable it.
-*   Find out more about RegNext and divided clock delayed reset.
 *   Proving that certain signals remain known/stable during test running, e.g. `uio_oe`: cocotb coroutine to run complex test sequencing, with an `await` on any edge in the main thread?
-*   VGA-DAC PCBs arrived.
+
+
+# RegNext
+
+https://discord.com/channels/1009193568256135208/1016726411400200292/1161155587573305374
+
+
+# VCD to image
+
+*   [Eldritch conversation kicked off this idea](https://discord.com/channels/1009193568256135208/1023600305407008868/1142514886304342157).
+*   I want to make it happen by default in `make` (for `test` GHA), with an ENV option to disable it.
+*   [GTKWave Automation (to save a PDF)](https://ughe.github.io/2018/11/13/gtkwave-automation) using Tcl scripts.
+    *   NOTE: Given script doesn't work as-is on Windows because of missing `ps2pdf` util. We could install this (Ghostscript?) or just use `PS` output instead (which Adobe Illustrator can open).
+    *   I also changed paper size to: `Legal (14" x 8.5")`
+    *   See also: [GTKWave User Guide - Appendix E: Tcl Command Syntax](https://gtkwave.sourceforge.net/gtkwave.pdf#page=117&zoom=100,76,206)
+    *   There's also 'File' => 'Grab to File' which just saves a screenshot of the current window as a PNG.
+    *   See [here](https://github.com/algofoogle/tt05-vga-spi-rom/commit/158a5a0d7550ee5ad040af42a8ad8d0f67f6e489) for my experiments with this, and use it like this:
+        ```bash
+        gtkwave -S vcd2png.tcl tb.vcd vcd2png.gtkw vcd2png.ini
+        ```
+        Note:
+        *   Tcl script directs GTKWave to save the view to both PS and PNG.
+        *   .gtkw file describes how to display the waveform.
+        *   .ini file specifies other visual rendering parameters.
+*   Try also, VCD conversion to wavedrom:
+    *   https://github.com/Toroid-io/vcd2wavedrom
+    *   https://github.com/nanamake/vcd2json
+
+
+# VGA-DAC PCBs
+
+My [VGA-DAC] PCBs (see journal [0146]) have arrived from JLCPCB 14 days after submission, and they look great:
+
+![VGA-DAC PCB front and back, straight](./i/0157-vga-dac-pcb-1.png)
+![VGA-DAC PCB front and back, angled](./i/0157-vga-dac-pcb-2.png)
+
+The silkscreen quality (actually, all quality) seems excellent. The footprint of the VGA connector's 15 pins doesn't precisely match the two connectors I bought from DigiKey (see [0146]) -- in KiCad they seem to be equally spaced on X and Y (but middle row just offset by half a pin), but the actual connectors seem to space the rows more than the individual pins. I will still able to get one of the connectors to fit by slightly bending its pins inwards towards the middle row. Interestingly, this error (or something similar) also shows up in the KiCad 3D render.
+
+
+# Notes
+
+*   You can push to GitHub and suppress GitHub Actions by [including a marker in your commit message](https://docs.github.com/en/actions/managing-workflow-runs/skipping-workflow-runs).
+
+[VGA-DAC]: https://github.com/algofoogle/sandpit/tree/master/fpga/VGA-DAC
+[0146]: ./0146-2023-09-26.md
