0157: tt05-vga-spi-rom and cocotb stuff

--- a/0157-2023-10-11.md
+++ b/0157-2023-10-11.md
@@ -13,6 +13,11 @@
 *   Proving that certain signals remain known/stable during test running, e.g. `uio_oe`: cocotb coroutine to run complex test sequencing, with an `await` on any edge in the main thread?
 
 
+# cocotb tests
+
+*   Tidied things up by moving all test files into `src/test/`, including `test.py`, which cocotb (actually Python) is instructed to find via [`PYTHONPATH`](https://github.com/algofoogle/tt05-vga-spi-rom/blob/5ba4134521c13ea8ac9d2a38b946651ae9f7ab79/src/Makefile#L21-L23). [The tests workin GHA](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6477184376).
+
+
 # RegNext
 
 https://discord.com/channels/1009193568256135208/1016726411400200292/1161155587573305374
@@ -27,9 +32,9 @@ https://discord.com/channels/1009193568256135208/1016726411400200292/11611555875
     *   I also changed paper size to: `Legal (14" x 8.5")`
     *   See also: [GTKWave User Guide - Appendix E: Tcl Command Syntax](https://gtkwave.sourceforge.net/gtkwave.pdf#page=117&zoom=100,76,206)
     *   There's also 'File' => 'Grab to File' which just saves a screenshot of the current window as a PNG.
-    *   See [here](https://github.com/algofoogle/tt05-vga-spi-rom/commit/158a5a0d7550ee5ad040af42a8ad8d0f67f6e489) for my experiments with this, and use it like this:
+    *   See [here](https://github.com/algofoogle/tt05-vga-spi-rom/commit/158a5a0d7550ee5ad040af42a8ad8d0f67f6e489) for my experiments with this. I then moved these files around, so when you want to use it, do so like this:
         ```bash
-        gtkwave -S vcd2png.tcl tb.vcd vcd2png.gtkw vcd2png.ini
+        gtkwave -S utils/vcd2png.tcl tb.vcd utils/vcd2png.gtkw utils/vcd2png.ini
         ```
         Note:
         *   Tcl script directs GTKWave to save the view to both PS and PNG.
