--- a/0157-2023-10-11.md
+++ b/0157-2023-10-11.md
@@ -6,6 +6,46 @@
 
 # tt05-vga-spi-rom and cocotb stuff
 
+# Accomplishments
+
+*   I spent a lot of the morning tidying up where test files are. Now there's `src/test` for everything except the `Makefile` (because TT05's `test` GHA template still expects to run `make` in there for tests).
+*   In the afternoon I tried to rewrite the code to be better-structured, simpler, easier to read, etc. There were some issues with this and it took up too much time. Changes are in the `cleanup` branch. Latest commit is [here](https://github.com/algofoogle/tt05-vga-spi-rom/commit/af0e55d52a1fee50719f7365844b2536dbfe3c11), where it works and currently looks like this:
+    ![Latest output from tt05-vga-spi-rom](./i/0157-cleanup.jpg)
+
+    It currently only uses RGB111 colour, because I wanted to prove that would work OK, before having versions that work up to RGB333.
+
+    NOTE: Blue channel now shows /CS, and I shifted the stored-mode range to be fully visible (for the time being).
+
+# Notes
+
+*   Can't do the following, because the incoming state is contradictory on different phases (or so it appears to the synth) even though they are separated from each other by hpos/state:
+    ```verilog
+    // In stored mode, buffer-to-screen display cycle on POSEDGE of clk:
+    always @(posedge clk) begin
+        if (stored_mode) begin
+            // Shift buffer bits at the right time. This will make them appear on screen.
+            if (hpos > PREAMBLE_LEN && hpos <= STREAM_LEN) begin
+                data_buffer <= {data_buffer[BUFFER_DEPTH-2:0], 1'b0};
+            end
+        end
+    end
+    // In stored mode, shift MISO into buffer on NEGEDGE of clk:
+    always @(negedge clk) begin
+        if (stored_mode) begin
+            // Load MISO bits into buffer at the right time:
+            if (state > PREAMBLE_LEN && state <= STREAM_LEN) begin
+                data_buffer <= {data_buffer[BUFFER_DEPTH-2:0], spi_miso};
+            end
+        end
+    end
+    //SMELL: Should above pair of 'always' blocks just be combined into @(clk) ?
+    ```
+*   **I think it would make more sense to just let all states and screen output be delayed by 1,** then we don't have to worry about ugly "what comes next" logic. Just comment the code enough to show that on negedges, hpos has already advanced. **CHECK:** Will this be more or LESS compatible with setting registers shift state changes?
+*   If things get a bit tricky with state tracking, especially during 799=>0 wrap-around, we could instead just use a separate counter register to count states. Then we can set it to 0 at 799 or whatever our 'start' register is programmed to.
+*   Could SPI SCLK follow CLK directly (positive, instead of inverted)? Then, we just prep data to clock in on negedge of CLK? Hmm... Might just be the same problem anyway.
+*   Would it help to register our outputs, then we don't have to worry about case/clock/state mismatches?
+
+
 # Goals
 
 *   Fix X signals in tt05-vga-spi-rom: Probably just need reset for all other regs?
@@ -58,6 +98,7 @@ The silkscreen quality (actually, all quality) seems excellent. The footprint of
 # Notes
 
 *   You can push to GitHub and suppress GitHub Actions by [including a marker in your commit message](https://docs.github.com/en/actions/managing-workflow-runs/skipping-workflow-runs).
+*   Clock doubler: https://electronics.stackexchange.com/a/446659
 
 [VGA-DAC]: https://github.com/algofoogle/sandpit/tree/master/fpga/VGA-DAC
 [0146]: ./0146-2023-09-26.md
