0158: A bunch of tt05vsr (tt05-vga-spi-rom) tests

--- a/0157-2023-10-11.md
+++ b/0157-2023-10-11.md
@@ -8,7 +8,7 @@
 
 # Accomplishments
 
-*   I spent a lot of the morning tidying up where test files are. Now there's `src/test` for everything except the `Makefile` (because TT05's `test` GHA template still expects to run `make` in there for tests).
+*   I spent a lot of the morning tidying up where test files are. Now there's `src/test` for everything except the `Makefile` (because TT05's `test` GHA template still expects to run `make` in there for tests). This included using `PYTHONPATH` in my `Makefile` so that it was possible to run `make` from the `src/` dir even though `src/test/test.py` is the main `MODULE` file that cocotb is told to use.
 *   In the afternoon I tried to rewrite the code to be better-structured, simpler, easier to read, etc. There were some issues with this and it took up too much time. Changes are in the `cleanup` branch. Latest commit is [here](https://github.com/algofoogle/tt05-vga-spi-rom/commit/af0e55d52a1fee50719f7365844b2536dbfe3c11), where it works and currently looks like this:
     ![Latest output from tt05-vga-spi-rom](./i/0157-cleanup.jpg)
 
