Lots of updates for 0159 test results

--- a/0159-2023-10-14.md
+++ b/0159-2023-10-14.md
@@ -4,13 +4,8 @@
 |-|-|
 | [**0158**-2023-10-13.md](./0158-2023-10-13.md) | *Next journal TBA* |
 
+
 # Continuing tt05vsr (tt05-vga-spi-rom) tests
-
-## Different on/off options to consider for final design
-
-*   Collapse state to only consider first 32 bits, and hence repeat the MOSI pattern. Good for testing jitter.
-*   Masking out certain bits.
-*   Registers to adjust state stuff, inc. offset, when to turn /CS on/off...? Would work best with test004 model.
 
 
 ## `test004-combo`
@@ -38,6 +33,13 @@ Change FSM to combo logic, i.e. don't use registers to control SPI outputs, but 
     *   41.57% util; 979 (!) total cells.
     *   ![Tidied test004 with simple 0](i/0159-test004-simple-tidied.png)
     *   Logic change was to make stored_mode region start at hpos==416 instead of 408, so the byte boundaries are the same.
+    *   NOTE: I also tried to change this line:
+        ```diff
+        - wire store_data_region = ( hpos >= STORED_MODE_HEAD+PREAMBLE_LEN &&  hpos < STORED_MODE_TAIL);
+        + wire store_data_region = (state >=                  PREAMBLE_LEN && state < STREAM_LEN      );
+        ```
+        ...which reduces total cells from 979 to 973, but makes util go slightly higher (up to 41.91%).
+
 
 Final output from test004-combo branch:
 
@@ -46,18 +48,43 @@ Final output from test004-combo branch:
 
 ## `test005-ram`
 
-Replace data_buffer with actual RAM. Does it make data retrieval easier without needing negedge-to-display? Use bit index in vector, or actual addressed memory array?
+This version is not using a 'memory array', but rather using the data_buffer shift reg in a way that is *technically* RAM (i.e. it can be treated as random access): We're using a bit index to access each bit from the buffer, as we need it, instead of shifting it out. This type of design might be more useful to raybox-zero anyway, where the next bit we need might not be sequential.
 
-Maybe try a version of this based on test002A, and another on test004.
+The advantage also of this design is that we can still sample/shift into the buffer during `negedge clk` (i.e. `posedge spi_sclk`), and then read directly from that buffer in sync with `clk` (rather than having to use `negedge clk` again to shift data out).
 
-![]()
+The downside is likely to be that more logic is likely to be required to actually convert an 'address' into the bit index we want... I'm guessing a big mux chain?
+
+Here are the notable versions of this design:
+*   [128-bit buffer, simple power-of-2 bit lookup](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6516270882): 48.51% util on 60% target density. 1060 cells, ~8mins to harden. Power-of-2 maths are easier for BUFFER_DEPTH.
+*   [Initial change to flexible BUFFER_DEPTH (non-power-2)](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6517451404). 48.49% util on 90% target density. 1072 cells, ~11mins to harden. Flexible BUFFER_DEPTH (non-power-2) means we use a different subtraction approach to get the bit index. Still 128 bits in this version. Interesting result is that 90% target density seems to have crammed everything up the top:
+    ![test005 128-bit flexible BUFFER_DEPTH density target 0.9](i/0159-test005-90pct.png)
+*   [192-bit buffer, flexible BUFFER_DEPTH](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6517595349): Has been running for over an hour. Might not succeed? I'll report back later.
+
+256 bits with 90% target density failed reasonably quickly during detailed routing.
 
 
 ## `test006-statereg`
 
-Add extra 'state' counter register that starts at hmax... but will this suffer the same vpos offset issue? Well maybe but we can probably make that not matter with a little trickery.
+**CANCELLED TEST:** Add extra 'state' counter register that starts at hmax... but will this suffer the same vpos offset issue? Well maybe but we can probably make that not matter with a little trickery.
 
-![]()
+
+# Next steps
+
+*   Start a project ideas catalogue in Journal, along the lines of how 'tips' are done, or just one long list.
+    *   solo_squash in 7400 logic.
+*   Using a true RAM on both store and paint is probably not a good idea...? I expect it will be a bit complex given address sharing, and not even necessary/ideal given we're going to read SPI sequentially into a buffer anyway.
+*   I based test005 on test004 (combo logic). Same concept would probably work also based on test002A (FSM)...?
+*   Try hardening locally? I think there's a new OL1 version in use for TT05.
+*   Add in `ABh` SPI wake-up command to sort out [spiflash issue below](#spiflash-issues).
+
+## Different on/off options to consider for final design
+
+*   Collapse state to only consider first 32 bits, and hence repeat the MOSI pattern. Good for testing jitter.
+*   Masking out certain bits.
+*   Registers to adjust state stuff, inc. offset, when to turn /CS on/off...? Would work best with test004 model.
+*   Should be possible to combine several different models into the same design, since the buffer is the main area. However, different modes (e.g. vector bit index vs. shifter) might reduce optimisation ability.
+
+
 
 
 # spiflash issues
