Updated 0159 a little bit

--- a/0159-2023-10-14.md
+++ b/0159-2023-10-14.md
@@ -7,6 +7,14 @@
 
 # Continuing tt05vsr (tt05-vga-spi-rom) tests
 
+# Accomplishments
+
+*   Did [test004](#test004-combo) with combo logic replacing FSM.
+*   Did [test005](#test005-ram) building on test004, to make *retrieval* from data_buffer like RAM.
+*   Did PR on test005, making `main` branch move from [registered FSM version](https://github.com/algofoogle/tt05-vga-spi-rom/blob/f47cea62570c8e45157e286745ad2686833de786/src/vga_spi_rom.v) (per test002A) to [136-bit combo/RAM model](https://github.com/algofoogle/tt05-vga-spi-rom/blob/b1bc1a93fee594268208493d05a36da2671216b5/src/vga_spi_rom.v) (per test005).
+*   Figured out [why spiflash sim is not working](#spiflash-issues) in cocotb (I think). Try a fix another day.
+*   Updated my MPW8 VM (on the Legion 7 laptop) to support `tt05env-bash` with newer OpenLane version.
+
 
 ## `test004-combo`
 
@@ -58,9 +66,17 @@ Here are the notable versions of this design:
 *   [128-bit buffer, simple power-of-2 bit lookup](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6516270882): 48.51% util on 60% target density. 1060 cells, ~8mins to harden. Power-of-2 maths are easier for BUFFER_DEPTH.
 *   [Initial change to flexible BUFFER_DEPTH (non-power-2)](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6517451404). 48.49% util on 90% target density. 1072 cells, ~11mins to harden. Flexible BUFFER_DEPTH (non-power-2) means we use a different subtraction approach to get the bit index. Still 128 bits in this version. Interesting result is that 90% target density seems to have crammed everything up the top:
     ![test005 128-bit flexible BUFFER_DEPTH density target 0.9](i/0159-test005-90pct.png)
-*   [192-bit buffer, flexible BUFFER_DEPTH](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6517595349): Has been running for over an hour. Might not succeed? I'll report back later.
+*   256 bits with 90% target density failed reasonably quickly during detailed routing.
+*   [192-bit buffer, flexible BUFFER_DEPTH](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6517595349): Has been running for over 2 hours in GHA. Might not succeed? I'll report back later. I'm also running it now on my laptop, but OpenLane is not using my configured 14 `ROUTING_CORES`...? Seems to only be using 2 at a time.
+*   [136-bit buffer](https://github.com/algofoogle/tt05-vga-spi-rom/actions/runs/6517951404): 51.91% util on 60% target density. 1152 cells, i.e. increase in 8 bits (which includes extra bit for data_buffer index) results in 80 more cells, and ~3.5 percentage points increase in util. Seems like a lot!
 
-256 bits with 90% target density failed reasonably quickly during detailed routing.
+136-bit version GDS:
+
+![136-bit GDS result](i/0159-test005-136b-gds.png)
+
+How it looks on-screen (showing off *17* bytes per line, i.e. last byte column is repeated in the next row's first byte):
+
+![Screenshot of 136-bit test005 version running on FPGA](./i/0159-test005-final.png)
 
 
 ## `test006-statereg`
@@ -70,21 +86,25 @@ Here are the notable versions of this design:
 
 # Next steps
 
-*   Start a project ideas catalogue in Journal, along the lines of how 'tips' are done, or just one long list.
-    *   solo_squash in 7400 logic.
+*   Consider the risk now that SPI outputs, given they're not registered, could glitch?
+    *   Don't care about MOSI, because it will be stable before being sampled.
+    *   SCLK is unlikely to glitch (?) because it is just a single-gate (?) inversion of clk.
+    *   **/CS could be an issue though?** It changes based on a chain of things: hpos => state => comparator.
 *   Using a true RAM on both store and paint is probably not a good idea...? I expect it will be a bit complex given address sharing, and not even necessary/ideal given we're going to read SPI sequentially into a buffer anyway.
 *   I based test005 on test004 (combo logic). Same concept would probably work also based on test002A (FSM)...?
 *   Try hardening locally? I think there's a new OL1 version in use for TT05.
 *   Add in `ABh` SPI wake-up command to sort out [spiflash issue below](#spiflash-issues).
+*   NOTE: It's possible this design won't work in Verilator (and hence no VGA C++ sim) because I seem to recall that it can't do more than 64-bit vectors. If that's the case, however, maybe we can have a tweak that splits it into 64-bit chunks, or even just limit it to 64-bit conditionally, for testing purposes?
+*   Start a project ideas catalogue in Journal, along the lines of how 'tips' are done, or just one long list.
+    *   solo_squash in 7400 logic -- probably a nice one to draw as a block diagram, too. Interesting problems to solve like counter carry...?
 
 ## Different on/off options to consider for final design
 
 *   Collapse state to only consider first 32 bits, and hence repeat the MOSI pattern. Good for testing jitter.
-*   Masking out certain bits.
+*   Masking out certain parts of the display.
+*   Switch between registered VGA output and direct output.
 *   Registers to adjust state stuff, inc. offset, when to turn /CS on/off...? Would work best with test004 model.
 *   Should be possible to combine several different models into the same design, since the buffer is the main area. However, different modes (e.g. vector bit index vs. shifter) might reduce optimisation ability.
-
-
 
 
 # spiflash issues
@@ -93,5 +113,9 @@ Despite my design working on an FPGA with a real SPI flash ROM chip, I was getti
 
 ![spiflash just echoing out what it gets in](./i/0158-spiflash-echo.png)
 
-My expectation, from datasheets, was that MISO should be HiZ until after the READ (03h) command and address are both sent. Also, we shouldn't be seeing MISO repeat MOSI (in this case with a 1-byte delay). From looking deeper into spiflash's state in the VCD, I found that `powered_up` was always 0, and this doesn't seem right. With `spiflash` the only way to switch it on is by sending the wakeup command (`ABh`, aka `RES`, aka 'Release from Deep Power Down / Device Id'), because the code specifies `reg powered_up = 0` as the initial state. Datasheets (and using a real device) suggest this is wrong. Anyway, maybe that's intentional to make sending `ABh` first a normal safety protocol. We can do that; probably best to do so during the first line, plenty of cycles before that first stored-mode read starts.
-
+My expectation, from datasheets, was that MISO should be HiZ until after the READ (03h) command and address are both sent.
+*   Also, we shouldn't be seeing MISO repeat MOSI (in this case with a 1-byte delay).
+*   From looking deeper into spiflash's state in the VCD, I found that `powered_up` was always 0, and this doesn't seem right.
+*   With `spiflash` the only way to switch it on is by sending the wakeup command (`ABh`, aka `RES`, aka 'Release from Deep Power Down / Device Id'), because the code specifies `reg powered_up = 0` as the initial state. Datasheets (and using a real device) suggest this is wrong.
+*   Anyway, maybe that's intentional to make sending `ABh` first a normal safety protocol.
+*   We can do that; probably best to do so during the first line, plenty of cycles before that first stored-mode read starts.
